--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
+    "start:prod": "NODE_ENV=production next start -p ${PORT:-3002}",
+    "start:dev": "NODE_ENV=development next start -p 3000",
+    "build:prod": "NODE_ENV=production next build",
+    "build:dev": "NODE_ENV=development next build",
     "lint": "next lint"
   },
   "dependencies": {
