--- a/config/com.whatsdesigns.caffeine.plist
+++ b/config/com.whatsdesigns.caffeine.plist
@@ -6,15 +6,16 @@
     <string>com.whatsdesigns.caffeine</string>
     <key>ProgramArguments</key>
     <array>
-        <string>/Applications/Caffeine.app/Contents/MacOS/Caffeine</string>
+        <string>/usr/bin/caffeinate</string>
+        <string>-i</string>
     </array>
     <key>RunAtLoad</key>
     <true/>
     <key>KeepAlive</key>
     <true/>
-    <key>ProcessType</key>
-    <string>Interactive</string>
-    <key>WorkingDirectory</key>
-    <string>/Applications/Caffeine.app/Contents/MacOS</string>
+    <key>StandardOutPath</key>
+    <string>/Users/jediOne/dev/whatsdesigns/logs/caffeine-out.log</string>
+    <key>StandardErrorPath</key>
+    <string>/Users/jediOne/dev/whatsdesigns/logs/caffeine-error.log</string>
 </dict>
 </plist> 
